src/css/inputs.css
@layer utilities {
    /** Textarea **/
    .textarea {
        @apply border border-solid bg-white text-light-black focus:border focus:border-solid  dark:bg-subtle-black dark:text-white;
    }
    .textarea-primary {
        @apply border-theme-secondary-400 read-only:bg-white focus:border-light-black disabled:bg-theme-secondary-100 dark:border-theme-secondary-500 read-only:dark:bg-subtle-black focus:dark:border-theme-secondary-300;
    }

    .textarea-destructive {
        @apply border-theme-error-300 focus:border-theme-error-600 focus:dark:border-theme-error-500;
    }

    .textarea-errorFree {
        @apply border-theme-primary-700 focus:border-theme-primary-700 disabled:bg-theme-secondary-100 dark:border-theme-primary-650 focus:dark:border-theme-primary-650;
    }

    /** Radio Input **/
    .radio-indicator {
        @apply transition-smoothEase absolute top-0 h-5 w-5 rounded-[10px] border border-solid border-theme-primary-700 after:absolute after:hidden after:content-[""] hover:bg-[#CCEEE0] focus:shadow-[0_0_0_2px_#E5FFF4] focus:shadow-[#E5FFF4] active:shadow-[0_0_0_2px_#E5FFF4] dark:border-theme-primary-600 hover:dark:bg-theme-primary-900;
    }

    [type='radio']:checked + .radio-indicator::after {
        @apply left-1/2 top-1/2 block h-2 w-2 -translate-x-1/2 -translate-y-1/2 transform rounded-full border border-solid border-theme-primary-700 bg-theme-primary-700 dark:border-theme-primary-600 dark:bg-theme-primary-600;
    }

    [type='radio']:disabled:checked + .radio-indicator::after {
        @apply border-theme-secondary-300 bg-theme-secondary-300 dark:border-theme-secondary-100 dark:bg-theme-secondary-100;
    }

    [type='radio']:disabled + .radio-indicator {
        @apply pointer-events-none border border-solid border-theme-secondary-300 bg-theme-secondary-100 dark:bg-black;
    }

    /** Checkbox Input **/
    .checkbox-indicator {
        @apply absolute top-0 h-5 w-5 rounded-md border border-solid border-theme-primary-700 bg-transparent hover:bg-[#CCEEE0] dark:border-theme-primary-600 dark:hover:bg-theme-primary-900;
    }

    .checkbox-indicator::after {
        @apply absolute hidden content-[""];
    }

    .checkbox-indicator:disabled {
        @apply cursor-not-allowed;
    }

    [type='checkbox'] + .checkbox-indicator::after {
        @apply border-b-[2px] border-l-0 border-r-[2px] border-t-0;
    }

    [type='checkbox']:checked + .checkbox-indicator::after {
        @apply left-[6px] top-px block h-[70%] w-[35%] rotate-45 border-solid border-white dark:border-light-black;
    }

    [type='checkbox']:disabled + .checkbox-indicator {
        @apply  border-theme-secondary-300 bg-theme-secondary-100 dark:bg-transparent;
    }

    [type='checkbox']:disabled + .checkbox-indicator::after {
        @apply border-theme-secondary-300 dark:border-theme-secondary-100 ;
    }

    [type='checkbox']:not(:disabled):checked + .checkbox-indicator {
        @apply bg-theme-primary-700 hover:bg-theme-primary-50 dark:bg-theme-primary-650 dark:hover:bg-theme-primary-950;
    }

    [type='checkbox']:not(:disabled):checked + .checkbox-indicator::after {
        @apply hover:border-b-[2px] hover:border-l-0 hover:border-r-[2px] hover:border-t-0 hover:border-solid hover:border-theme-primary-700 group-hover:border-b-[2px] group-hover:border-l-0 group-hover:border-r-[2px] group-hover:border-t-0 group-hover:border-solid group-hover:border-theme-primary-700 dark:hover:border-theme-primary-650 dark:group-hover:border-theme-primary-650;
    }

    [type='checkbox']:not(:disabled):not(:checked) + .checkbox-indicator {
        @apply group-hover:bg-[#CCEEE0]
    }

    [type='checkbox']:not(:disabled):checked + .checkbox-indicator {
        @apply group-hover:bg-theme-primary-50 group-hover:dark:bg-theme-primary-950;
    }

    /** Toggle switch **/
    .toggle-switch-slider {
        @apply absolute bottom-0 left-0 right-0 top-0 z-[1] cursor-pointer rounded-xl bg-theme-secondary-200 duration-[0.4s] hover:bg-theme-primary-700 group-hover:bg-[#CCEEE0] dark:bg-theme-secondary-600 dark:hover:bg-theme-primary-650 dark:group-hover:bg-theme-primary-900;
    }

    .toggle-switch-slider::before {
        @apply absolute bottom-0.5 left-[3px] h-4 w-4 rounded-full bg-white fill-white drop-shadow-[0_1px_3px_rgba(16,24,40,0.10)] duration-[0.4s] content-[""];
    }

    [type='checkbox']:checked + .toggle-switch-slider {
        @apply bg-theme-primary-700 hover:bg-theme-primary-700 dark:bg-theme-primary-650 dark:hover:bg-theme-primary-600;
    }

    [type='checkbox']:checked + .toggle-switch-slider::before {
        @apply translate-x-[14px] transform;
    }

    [type='checkbox']:disabled + .toggle-switch-slider {
        @apply pointer-events-none;
    }

    [type='checkbox']:disabled:not(:checked) + .toggle-switch-slider {
        @apply bg-theme-secondary-100 dark:bg-theme-secondary-400;
    }

    [type='checkbox']:disabled:not(:checked) + .toggle-switch-slider::before {
        @apply bg-theme-secondary-300 drop-shadow-[0_1px_3px_rgba(16,24,40,0.10)];
    }

    [type='checkbox']:disabled:checked + .toggle-switch-slider {
        @apply bg-[#9ADCC1] dark:bg-theme-primary-800;
    }

    [type='checkbox']:disabled:checked + .toggle-switch-slider::before {
        @apply bg-white;
    }

    /** Text Input **/
    .text-input {
        @apply border border-solid bg-white text-light-black focus:border focus:border-solid dark:bg-subtle-black dark:text-white;
    }

    .text-input-primary {
        @apply border-theme-secondary-400 focus:border-light-black disabled:bg-theme-secondary-100 dark:border-theme-secondary-500 focus:dark:border-theme-secondary-300;
    }

    .text-input-destructive {
        @apply border-theme-error-500 focus:border-theme-error-600 focus:dark:border-theme-error-500;
    }

    .text-input-errorFree {
        @apply border-theme-primary-700 focus:border-theme-primary-700  disabled:bg-theme-secondary-100 dark:border-theme-primary-650 focus:dark:border-theme-primary-650;
    }

    /** Passphrase Input **/
    .passphrase-primary,
    .passphrase-destructive,
    .passphrase-errorFree {
        @apply border border-solid bg-white text-light-black focus:border focus:border-solid dark:bg-subtle-black dark:text-white;
    }

    .passphrase-primary {
        @apply border-theme-secondary-400 read-only:bg-white focus:border-light-black disabled:bg-theme-secondary-100 dark:read-only:bg-subtle-black dark:focus:border-theme-secondary-300;
    }

    .passphrase-destructive {
        @apply border-theme-error-300 focus:border-theme-error-600 dark:focus:border-theme-error-500;
    }

    .passphrase-errorFree {
        @apply border-theme-primary-700 focus:border-theme-primary-700 disabled:bg-theme-secondary-100 dark:border-theme-primary-650 dark:focus:border-theme-primary-650;
    }
}

